2003-07-13  NAKAJIMA Mikio  <minakaji@namazu.org>

	* skk-study.el (skk-study-read): Use `when' instead of `if'.
	(skk-undo-kakutei): Ditto.
	(skk-study-check-alist-format-1): Ditto.
	(skk-study-read-1): Ditto.
	(skk-study-save): Ditto.
	(skk-study-read): Use `unless' instead of `or'.

	* skk-vars.el (skk-study-check-alist-format): Change its default
	value to nil.

	* ptexinfmt.el (texinfo-format-separate-node): Declare with
	`ptexinfmt-broken-facility' and `ptexinfmt-defun-if-broken'.
	(texinfo-format-end-node): Ditto.

	* skk-study.el (skk-study-read): Require skk-macs.el, skk-vars.el
	and ring.el outside `eval-when-compile'.
	(skk-study-search): Use `when' instead of `if', simplified
	slightly and add doc string.
	(skk-study-update): Simplified slightly and add doc string.

2003-07-12  NAKAJIMA Mikio  <minakaji@namazu.org>

	* skk-study.el:	Move all variables and constants to skk-vars.el.
	(skk-study-update): Check if `skk-study-max-distance' is nil or
	not.
	Check if `skk-study-first-candidate' is nil or not.
	(skk-study-first-candidate): New user variable.

	* Makefile (VERSION): Change 12.2.0rc1 to 12.2.0.

	* skk-study.el: Move from experimental directory.
	(skk-kakutei-initialize): Simplified it by using `ring-elements'.
	(skk-study-search-times): Change its default value to 5.
	(skk-study-max-distance): New user variable.
	(skk-study-update): Bug fixed.
	Not to study henkan relationship when (i) buffer was changed since
	last henkan, (ii) distance from last henkan point was negative or
	(iii) such distance is longer than `skk-study-max-distance'.

	* skk.el (skk-kakutei-initialize): Store buffer and point (marker)
	data of last henkan.

2003-07-11  NAKAJIMA Mikio  <minakaji@namazu.org>

	* experimental/skk-study.el (skk-kakutei-initialize): Bug fixed.
	(skk-study-update): Do not add/update data to `skk-study-alist'
	when KAKUTEI-WORD is equal to car of `skk-henkan-list'.
	(skk-study-save): Modify message string slightly.
